add readme file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="wrapper">
         <div class="container">
-            <h1>Value Pair Manager</h1>
+            <h1>Value Pair Manager v.1</h1>
             
             <div class="input-section">
                 <input type="text" id="pairInput" placeholder="Name=Value">
